peac_dev/force-app/main/default/objects/Buyout_Asset__c/Buyout_Asset__c.object-meta.xml
<CustomObject>
    <description>Object to represent the many-to-many relationship between Buyouts and Contract Assets</description>
    <label>Buyout Asset</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyout Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>