peac_dev/force-app/main/default/objects/Buyout_Asset__c/fields/Buyout__c.field-meta.xml
<CustomField>
    <fullName>Buyout__c</fullName>
    <label>Buyout</label>
    <referenceTo>Buyout__c</referenceTo>
    <relationshipLabel>Buyout Assets</relationshipLabel>
    <relationshipName>Buyout_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>