peac_dev/force-app/main/default/objects/Buyout_Asset__c/fields/Contract_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contract_Asset__c</fullName>
    <label>Contract Asset</label>
    <referenceTo>Contract_Asset__c</referenceTo>
    <relationshipLabel>Buyout Assets</relationshipLabel>
    <relationshipName>Buyout_Assets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>