peac_dev/force-app/main/default/objects/Buyout_Asset__c/fields/Contract_Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Asset_Serial_Number__c</fullName>
    <formula>Contract_Asset__r.Serial_Number__c</formula>
    <label>Contract Asset Serial Number</label>
    <type>Text</type>
</CustomField>